# Data_Analytics_Projects

Diamond Dynamics Price Prediction and Market Segmentation/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
Diamond Dynamics Price Prediction and Market Segmentation/configs/: clustering_config.yaml  config.yaml  features.yaml  model_registry.yaml  paths.yaml  regression_config.yaml  streamlit_config.yaml
Diamond Dynamics Price Prediction and Market Segmentation/docs/: cluster_naming_logic.md  dataset_description.md  feature_dictionary.md  initial_project_objective_note.md  modeling_notes.md  problem_statement.md  project_overview.md  project_workflow.md
Diamond Dynamics Price Prediction and Market Segmentation/notebooks/: 01_project_setup_and_data_loading.ipynb  02_data_cleaning_and_preprocessing.ipynb  03_outlier_and_skewness_handling.ipynb  04_eda.ipynb  05_feature_engineering.ipynb  06_feature_selection_and_encoding.ipynb  07_regression_modeling.ipynb  08_ann_regression.ipynb  09_clustering_and_pca.ipynb  10_model_comparison.ipynb  11_streamlit_inference_check.ipynb  12_final_summary_and_results.ipynb
Diamond Dynamics Price Prediction and Market Segmentation/reports/: ann_evaluation_report.md  clustering_report.md  eda_report.md  feature_engineering_report.md  final_project_report.md  model_selection_report.md  pca_report.md  processing_report.md  regression_evaluation_report.md
Diamond Dynamics Price Prediction and Market Segmentation/scripts/: launch_streamlit.sh  run_ann_training.py  run_clustering.py  run_data_pipeline.py  (+4 more)
(+202 files in other folders)
