[metadata]
name = diamond-price-prediction-market-segmentation
version = 0.1.0
description = Diamond price prediction and market segmentation
author = Shubham Masal
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    numpy
    pandas
    matplotlib
    seaborn
    scikit-learn
    scipy
    joblib
    pyyaml
    jupyter
    notebook
    ipykernel
    xgboost
    lightgbm
    streamlit
    pytest
    python-dotenv

[options.packages.find]
exclude =
    tests
    notebooks
    data
    docs
    artifacts

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 88
exclude = .venv,build,dist,__pycache__,.ipynb_checkpoints